Kubernetes/webflow.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webflow
  namespace: pre-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webflow
  template:
    metadata:
      labels:
        app: webflow
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - webflow
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: webflow
          image: craeudevtransversal.azurecr.io/nextgenid.web.webflow:v.#{Build.BuildId}#
          resources:
              requests:
                cpu: 50m
                memory: 50Mi
              limits:
                cpu: 250m
                memory: 500Mi
          ports:
            - containerPort: 4000
