Kubernetes/webflow.service.yml
apiVersion: v1
kind: Service
metadata:
  name: webflow
  namespace: pre-microservice
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 4000  # Puerto del Service expuesto
    targetPort: 4000 # Puerto del contenedor donde corre la app
  selector:
    app: webflow
